...
            "state": "translated",
            "value": "Add a widget"
          }
        }
      }
    },
    "キャンセル": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
...
            "state": "translated",
            "value": "West-southwest"
          }
        }
      }
    },
    "設定": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        }
      }
    },
    "設定アプリで写真へのアクセスを許可してください": {
      "localizations": {
...
            "state": "translated",
            "value": "Better to dry indoors"
          }
        }
      }
    },
    "都市を検索": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search cities"
          }
        }
      }
    },
    "都市を選ぶ": {
      "localizations": {
...
            "state": "translated",
            "value": "Search by city (e.g. Osaka, Paris)"
          }
        }
      }
    },
    "閉じる": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        }
      }
    },
    "開発を続ける力になります": {
      "localizations": {
...
